--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,12 @@ body {
 }
 
 a {
-  color: #0069e0;
+  color: #2f5b8d;
   text-decoration: none;
 }
 
 a:hover {
-  color: #3597ff;
+  color: #1a61ad;
   text-decoration: none;
 }
 
@@ -56,7 +56,7 @@ h6 {
   width: 40px;
   height: 40px;
   border-radius: 50px;
-  background: #0069e0;
+  background: #2f5b8d;
   color: #fff;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
@@ -151,7 +151,7 @@ h6 {
 .nav-menu a:hover,
 .nav-menu .active > a,
 .nav-menu li:hover > a {
-  background: #0069e0;
+  background: #2f5b8d;
   text-decoration: none;
 }
 
@@ -195,7 +195,7 @@ h6 {
 .nav-menu .drop-down ul a:hover,
 .nav-menu .drop-down ul .active > a,
 .nav-menu .drop-down ul li:hover > a {
-  color: #0069e0;
+  color: #2f5b8d;
   background: none;
 }
 
@@ -295,7 +295,7 @@ h6 {
 .mobile-nav a:hover,
 .mobile-nav .active > a,
 .mobile-nav li:hover > a {
-  color: #0069e0;
+  color: #2f5b8d;
   text-decoration: none;
 }
 
@@ -427,11 +427,11 @@ h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  border: 2px solid #0069e0;
+  border: 2px solid #2f5b8d;
 }
 
 #hero .btn-get-started:hover {
-  background: #0069e0;
+  background: #2f5b8d;
   color: #fff;
   text-decoration: none;
 }
@@ -623,7 +623,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #0069e0;
+  color: #2f5b8d;
   line-height: 1;
 }
 
@@ -642,15 +642,15 @@ section {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   line-height: 1;
-  color: #0069e0;
+  color: #2f5b8d;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #0069e0;
+  border: 2px solid #2f5b8d;
 }
 
 .about .content .btn-learn-more:hover {
-  background: #0069e0;
+  background: #2f5b8d;
   color: #fff;
   text-decoration: none;
 }
@@ -692,13 +692,13 @@ section {
 }
 
 .features .nav-link:hover {
-  color: #0069e0;
+  color: #2f5b8d;
 }
 
 .features .nav-link.active {
-  background: #0069e0;
+  background: #2f5b8d;
   color: #fff;
-  border-color: #0069e0;
+  border-color: #2f5b8d;
 }
 
 @media (max-width: 768px) {
@@ -739,7 +739,7 @@ section {
 .features .tab-pane ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #0069e0;
+  color: #2f5b8d;
 }
 
 .features .tab-pane p:last-child {
@@ -777,12 +777,12 @@ section {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #0069e0;
+  background: #2f5b8d;
 }
 
 .cta .cta-btn:hover {
   background: #fff;
-  color: #0069e0;
+  color: #2f5b8d;
 }
 
 @media (max-width: 1024px) {
@@ -856,7 +856,7 @@ section {
 }
 
 .services .title a:hover {
-  color: #0069e0;
+  color: #2f5b8d;
 }
 
 .services .description {
@@ -909,12 +909,12 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #0069e0;
+  color: #2f5b8d;
 }
 
 .portfolio #portfolio-flters li.filter-active::before,
 .portfolio #portfolio-flters li.filter-active::after {
-  color: #0069e0;
+  color: #2f5b8d;
 }
 
 .portfolio .portfolio-item {
@@ -1084,7 +1084,7 @@ section {
 }
 
 .testimonials .owl-dot.active {
-  background-color: #0069e0 !important;
+  background-color: #2f5b8d !important;
 }
 
 @media (max-width: 767px) {
@@ -1119,7 +1119,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #0069e0;
+  color: #2f5b8d;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1151,7 +1151,7 @@ section {
 }
 
 .pricing ul i {
-  color: #0069e0;
+  color: #2f5b8d;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1169,7 +1169,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #0069e0;
+  background: #2f5b8d;
   display: inline-block;
   padding: 8px 35px 10px 35px;
   border-radius: 50px;
@@ -1189,12 +1189,12 @@ section {
 }
 
 .pricing .featured {
-  border: 2px solid #0069e0;
+  border: 2px solid #2f5b8d;
 }
 
 .pricing .featured h3 {
   color: #fff;
-  background: #0069e0;
+  background: #2f5b8d;
 }
 
 .pricing .advanced {
@@ -1207,7 +1207,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #0069e0;
+  background: #2f5b8d;
   color: #fff;
 }
 
@@ -1230,7 +1230,7 @@ section {
 .faq .faq-list a {
   display: block;
   position: relative;
-  font-family: #0069e0;
+  font-family: #2f5b8d;
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
@@ -1249,7 +1249,7 @@ section {
 }
 
 .faq .faq-list a.collapse {
-  color: #0069e0;
+  color: #2f5b8d;
 }
 
 .faq .faq-list a.collapsed {
@@ -1257,7 +1257,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #0069e0;
+  color: #2f5b8d;
 }
 
 .faq .faq-list a.collapsed i::before {
@@ -1361,7 +1361,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #0069e0;
+  color: #2f5b8d;
   float: left;
   width: 44px;
   height: 44px;
@@ -1403,7 +1403,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #0069e0;
+  background: #2f5b8d;
   color: #fff;
 }
 
@@ -1483,7 +1483,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #0069e0;
+  background: #2f5b8d;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1607,7 +1607,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #0069e0 !important;
+  background-color: #2f5b8d !important;
 }
 
 .portfolio-details .portfolio-info {
@@ -1696,7 +1696,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #0069e0;
+  background: #2f5b8d;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
