no new changes normally

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -29,6 +29,6 @@ $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 
-$background: #16222A; 
-$background: -webkit-linear-gradient(to right, #3A6073, #16222A);  
-$background: linear-gradient(to right, #3A6073, #16222A); 
+$background: #16222a;
+$background: -webkit-linear-gradient(to right, #3a6073, #16222a);
+$background: linear-gradient(to right, #3a6073, #16222a);
