--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,8 @@ h6 {
   transition: all 0.5s;
   z-index: 997;
   transition: all 0.5s;
-  background: rgba(42, 44, 57, 0.9);
+  background: -webkit-gradient(linear, left top, right top, from(#3a6073), to(#16222a));
+  background: linear-gradient(to right, #3a6073, #16222a);
 }
 
 #header.header-transparent {
@@ -94,7 +95,8 @@ h6 {
 }
 
 #header.header-scrolled {
-  background: rgba(42, 44, 57, 0.9);
+  background: -webkit-gradient(linear, left top, right top, from(#3a6073), to(#16222a));
+  background: linear-gradient(to right, #3a6073, #16222a);
 }
 
 #header .logo h1 {
@@ -165,8 +167,8 @@ h6 {
   visibility: hidden;
   padding: 10px 0;
   background: #fff;
-  -webkit-box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-          box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  -webkit-box-shadow: 0px 0px 30px linear-gradient(to right, #3a6073, #16222a);
+          box-shadow: 0px 0px 30px linear-gradient(to right, #3a6073, #16222a);
   -webkit-transition: ease all 0.3s;
   transition: ease all 0.3s;
   border-radius: 15px;
@@ -331,7 +333,8 @@ h6 {
   top: 0;
   left: 0;
   position: fixed;
-  background: rgba(20, 21, 28, 0.6);
+  background: -webkit-gradient(linear, left top, right top, from(#3a6073), to(#16222a));
+  background: linear-gradient(to right, #3a6073, #16222a);
   overflow: hidden;
   display: none;
   -webkit-transition: ease-in-out 0.2s;
@@ -578,7 +581,7 @@ section {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #fd9042;
+  background: #00d9ff;
   margin: 4px 10px;
 }
 
@@ -750,7 +753,8 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: #2a2c39;
+  background: -webkit-gradient(linear, left top, right top, from(#3a6073), to(#16222a));
+  background: linear-gradient(to right, #3a6073, #16222a);
   padding: 80px 0;
 }
 
@@ -814,8 +818,8 @@ section {
   overflow: hidden;
   border-radius: 10px;
   background: #fff;
-  -webkit-box-shadow: 0 2px 29px 0 rgba(68, 88, 144, 0.12);
-          box-shadow: 0 2px 29px 0 rgba(68, 88, 144, 0.12);
+  -webkit-box-shadow: 0 2px 29px 0 linear-gradient(to right, #3a6073, #16222a);
+          box-shadow: 0 2px 29px 0 linear-gradient(to right, #3a6073, #16222a);
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
   width: 100%;
@@ -825,8 +829,8 @@ section {
 .services .icon-box:hover {
   -webkit-transform: translateY(-10px);
           transform: translateY(-10px);
-  -webkit-box-shadow: 0 2px 35px 0 rgba(68, 88, 144, 0.2);
-          box-shadow: 0 2px 35px 0 rgba(68, 88, 144, 0.2);
+  -webkit-box-shadow: 0 2px 35px 0 linear-gradient(to right, #3a6073, #16222a);
+          box-shadow: 0 2px 35px 0 linear-gradient(to right, #3a6073, #16222a);
 }
 
 .services .icon {
@@ -939,7 +943,8 @@ section {
   right: 15px;
   -webkit-transition: all ease-in-out 0.3s;
   transition: all ease-in-out 0.3s;
-  background: rgba(0, 0, 0, 0.5);
+  background: -webkit-gradient(linear, left top, right top, from(#3a6073), to(#16222a));
+  background: linear-gradient(to right, #3a6073, #16222a);
   padding: 10px 15px;
 }
 
@@ -1020,8 +1025,8 @@ section {
   margin: 30px 15px;
   text-align: center;
   min-height: 350px;
-  -webkit-box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
-          box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+  -webkit-box-shadow: 0px 2px 12px linear-gradient(to right, #3a6073, #16222a);
+          box-shadow: 0px 2px 12px linear-gradient(to right, #3a6073, #16222a);
 }
 
 .testimonials .testimonial-item .testimonial-img {
@@ -1100,8 +1105,8 @@ section {
   padding: 20px;
   background: #fff;
   text-align: center;
-  -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0px 0px 4px linear-gradient(to right, #3a6073, #16222a);
+          box-shadow: 0px 0px 4px linear-gradient(to right, #3a6073, #16222a);
   border-radius: 5px;
   position: relative;
   overflow: hidden;
@@ -1267,91 +1272,6 @@ section {
 /*--------------------------------------------------------------
 # Team
 --------------------------------------------------------------*/
-.team {
-  background: #fff;
-  padding: 60px 0;
-}
-
-.team .member {
-  margin-bottom: 20px;
-  overflow: hidden;
-  border-radius: 5px;
-  background: #fff;
-  -webkit-box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}
-
-.team .member .member-img {
-  position: relative;
-  overflow: hidden;
-}
-
-.team .member .social {
-  position: absolute;
-  left: 0;
-  bottom: 30px;
-  right: 0;
-  opacity: 0;
-  -webkit-transition: ease-in-out 0.3s;
-  transition: ease-in-out 0.3s;
-  text-align: center;
-}
-
-.team .member .social a {
-  -webkit-transition: color 0.3s;
-  transition: color 0.3s;
-  color: #2a2c39;
-  margin: 0 3px;
-  padding-top: 7px;
-  border-radius: 50px;
-  width: 36px;
-  height: 36px;
-  background: -webkit-gradient(linear, left top, right top, from(#3a6073), to(#16222a));
-  background: linear-gradient(to right, #3a6073, #16222a);
-  display: inline-block;
-  -webkit-transition: ease-in-out 0.3s;
-  transition: ease-in-out 0.3s;
-  color: #fff;
-}
-
-.team .member .social a:hover {
-  background: #00d9ff;
-}
-
-.team .member .social i {
-  font-size: 18px;
-}
-
-.team .member .member-info {
-  padding: 25px 15px;
-}
-
-.team .member .member-info h4 {
-  font-weight: 700;
-  margin-bottom: 5px;
-  font-size: 18px;
-  color: #2a2c39;
-}
-
-.team .member .member-info span {
-  display: block;
-  font-size: 13px;
-  font-weight: 400;
-  color: #aaaaaa;
-}
-
-.team .member .member-info p {
-  font-style: italic;
-  font-size: 14px;
-  line-height: 26px;
-  color: #777777;
-}
-
-.team .member:hover .social {
-  opacity: 1;
-  bottom: 15px;
-}
-
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
@@ -1428,7 +1348,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: #00d9ff;
   text-align: left;
   padding: 15px;
   font-weight: 600;
@@ -1617,8 +1537,8 @@ section {
   right: 0;
   bottom: -70px;
   background: #fff;
-  -webkit-box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 2px 15px linear-gradient(to right, #3a6073, #16222a);
+          box-shadow: 0px 2px 15px linear-gradient(to right, #3a6073, #16222a);
   z-index: 2;
 }
 
@@ -1666,7 +1586,8 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #14151c;
+  background: -webkit-gradient(linear, left top, right top, from(#3a6073), to(#16222a));
+  background: linear-gradient(to right, #3a6073, #16222a);
   color: #fff;
   font-size: 14px;
   text-align: center;
