--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -80,7 +80,7 @@ h6 {
   transition: all 0.5s;
   z-index: 997;
   transition: all 0.5s;
-  background: rgba(42, 44, 57, 0.9);
+  background: $background;
 }
 
 #header.header-transparent {
@@ -88,7 +88,7 @@ h6 {
 }
 
 #header.header-scrolled {
-  background: rgba(42, 44, 57, 0.9);
+  background: $background;
 }
 
 #header .logo h1 {
@@ -158,7 +158,7 @@ h6 {
   visibility: hidden;
   padding: 10px 0;
   background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  box-shadow: 0px 0px 30px $background;
   transition: ease all 0.3s;
   border-radius: 15px;
   margin-top: 5px;
@@ -322,7 +322,7 @@ h6 {
   top: 0;
   left: 0;
   position: fixed;
-  background: rgba(20, 21, 28, 0.6);
+  background: $background;
   overflow: hidden;
   display: none;
   transition: ease-in-out 0.2s;
@@ -553,7 +553,7 @@ section {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #fd9042;
+  background: $primaryCLighter;
   margin: 4px 10px;
 }
 
@@ -718,7 +718,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: #2a2c39;
+  background: $background;
   padding: 80px 0;
 }
 
@@ -775,7 +775,7 @@ section {
   overflow: hidden;
   border-radius: 10px;
   background: #fff;
-  box-shadow: 0 2px 29px 0 rgba(68, 88, 144, 0.12);
+  box-shadow: 0 2px 29px 0 $background;
   transition: all 0.4s ease-in-out;
   width: 100%;
   height: 100%;
@@ -783,7 +783,7 @@ section {
 
 .services .icon-box:hover {
   transform: translateY(-10px);
-  box-shadow: 0 2px 35px 0 rgba(68, 88, 144, 0.2);
+  box-shadow: 0 2px 35px 0 $background;
 }
 
 .services .icon {
@@ -889,7 +889,7 @@ section {
   z-index: 3;
   right: 15px;
   transition: all ease-in-out 0.3s;
-  background: rgba(0, 0, 0, 0.5);
+  background: $background;
   padding: 10px 15px;
 }
 
@@ -965,7 +965,7 @@ section {
   margin: 30px 15px;
   text-align: center;
   min-height: 350px;
-  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 2px 12px $background;
 }
 
 .testimonials .testimonial-item .testimonial-img {
@@ -1044,7 +1044,7 @@ section {
   padding: 20px;
   background: #fff;
   text-align: center;
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 0px 4px $background;
   border-radius: 5px;
   position: relative;
   overflow: hidden;
@@ -1207,85 +1207,85 @@ section {
 /*--------------------------------------------------------------
 # Team
 --------------------------------------------------------------*/
-.team {
-  background: #fff;
-  padding: 60px 0;
-}
+// .team {
+//   background: #fff;
+//   padding: 60px 0;
+// }
 
-.team .member {
-  margin-bottom: 20px;
-  overflow: hidden;
-  border-radius: 5px;
-  background: #fff;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}
+// .team .member {
+//   margin-bottom: 20px;
+//   overflow: hidden;
+//   border-radius: 5px;
+//   background: #fff;
+//   box-shadow: 0px 2px 15px $background;
+// }
 
-.team .member .member-img {
-  position: relative;
-  overflow: hidden;
-}
+// .team .member .member-img {
+//   position: relative;
+//   overflow: hidden;
+// }
 
-.team .member .social {
-  position: absolute;
-  left: 0;
-  bottom: 30px;
-  right: 0;
-  opacity: 0;
-  transition: ease-in-out 0.3s;
-  text-align: center;
-}
+// .team .member .social {
+//   position: absolute;
+//   left: 0;
+//   bottom: 30px;
+//   right: 0;
+//   opacity: 0;
+//   transition: ease-in-out 0.3s;
+//   text-align: center;
+// }
 
-.team .member .social a {
-  transition: color 0.3s;
-  color: #2a2c39;
-  margin: 0 3px;
-  padding-top: 7px;
-  border-radius: 50px;
-  width: 36px;
-  height: 36px;
-  background: $background;
-  display: inline-block;
-  transition: ease-in-out 0.3s;
-  color: #fff;
-}
+// .team .member .social a {
+//   transition: color 0.3s;
+//   color: #2a2c39;
+//   margin: 0 3px;
+//   padding-top: 7px;
+//   border-radius: 50px;
+//   width: 36px;
+//   height: 36px;
+//   background: $background;
+//   display: inline-block;
+//   transition: ease-in-out 0.3s;
+//   color: #fff;
+// }
 
-.team .member .social a:hover {
-  background:$primaryCLighter;
-}
+// .team .member .social a:hover {
+//   background:$primaryCLighter;
+// }
 
-.team .member .social i {
-  font-size: 18px;
-}
+// .team .member .social i {
+//   font-size: 18px;
+// }
 
-.team .member .member-info {
-  padding: 25px 15px;
-}
+// .team .member .member-info {
+//   padding: 25px 15px;
+// }
 
-.team .member .member-info h4 {
-  font-weight: 700;
-  margin-bottom: 5px;
-  font-size: 18px;
-  color: #2a2c39;
-}
+// .team .member .member-info h4 {
+//   font-weight: 700;
+//   margin-bottom: 5px;
+//   font-size: 18px;
+//   color: #2a2c39;
+// }
 
-.team .member .member-info span {
-  display: block;
-  font-size: 13px;
-  font-weight: 400;
-  color: #aaaaaa;
-}
+// .team .member .member-info span {
+//   display: block;
+//   font-size: 13px;
+//   font-weight: 400;
+//   color: #aaaaaa;
+// }
 
-.team .member .member-info p {
-  font-style: italic;
-  font-size: 14px;
-  line-height: 26px;
-  color: #777777;
-}
+// .team .member .member-info p {
+//   font-style: italic;
+//   font-size: 14px;
+//   line-height: 26px;
+//   color: #777777;
+// }
 
-.team .member:hover .social {
-  opacity: 1;
-  bottom: 15px;
-}
+// .team .member:hover .social {
+//   opacity: 1;
+//   bottom: 15px;
+// }
 
 /*--------------------------------------------------------------
 # Contact
@@ -1356,7 +1356,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: $primaryCLighter;
   text-align: left;
   padding: 15px;
   font-weight: 600;
@@ -1540,7 +1540,7 @@ section {
   right: 0;
   bottom: -70px;
   background: #fff;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 15px $background;
   z-index: 2;
 }
 
@@ -1588,7 +1588,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #14151c;
+  background: $background;
   color: #fff;
   font-size: 14px;
   text-align: center;
