--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-  color: #2f5b8d;
+  color: #00a2ca;
   text-decoration: none;
 }
 
@@ -56,7 +56,7 @@ h6 {
   width: 40px;
   height: 40px;
   border-radius: 50px;
-  background: #2f5b8d;
+  background: #00a2ca;
   color: #fff;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
@@ -153,7 +153,7 @@ h6 {
 .nav-menu a:hover,
 .nav-menu .active > a,
 .nav-menu li:hover > a {
-  background: #2f5b8d;
+  background: #00a2ca;
   text-decoration: none;
 }
 
@@ -197,7 +197,7 @@ h6 {
 .nav-menu .drop-down ul a:hover,
 .nav-menu .drop-down ul .active > a,
 .nav-menu .drop-down ul li:hover > a {
-  color: #2f5b8d;
+  color: #00a2ca;
   background: none;
 }
 
@@ -297,7 +297,7 @@ h6 {
 .mobile-nav a:hover,
 .mobile-nav .active > a,
 .mobile-nav li:hover > a {
-  color: #2f5b8d;
+  color: #00a2ca;
   text-decoration: none;
 }
 
@@ -430,11 +430,11 @@ h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  border: 2px solid #2f5b8d;
+  border: 2px solid #00a2ca;
 }
 
 #hero .btn-get-started:hover {
-  background: #2f5b8d;
+  background: #00a2ca;
   color: #fff;
   text-decoration: none;
 }
@@ -626,7 +626,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #2f5b8d;
+  color: #00a2ca;
   line-height: 1;
 }
 
@@ -645,15 +645,15 @@ section {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   line-height: 1;
-  color: #2f5b8d;
+  color: #00a2ca;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #2f5b8d;
+  border: 2px solid #00a2ca;
 }
 
 .about .content .btn-learn-more:hover {
-  background: #2f5b8d;
+  background: #00a2ca;
   color: #fff;
   text-decoration: none;
 }
@@ -695,13 +695,13 @@ section {
 }
 
 .features .nav-link:hover {
-  color: #2f5b8d;
+  color: #00a2ca;
 }
 
 .features .nav-link.active {
-  background: #2f5b8d;
+  background: #00a2ca;
   color: #fff;
-  border-color: #2f5b8d;
+  border-color: #00a2ca;
 }
 
 @media (max-width: 768px) {
@@ -742,7 +742,7 @@ section {
 .features .tab-pane ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #2f5b8d;
+  color: #00a2ca;
 }
 
 .features .tab-pane p:last-child {
@@ -781,12 +781,12 @@ section {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #2f5b8d;
+  background: #00a2ca;
 }
 
 .cta .cta-btn:hover {
   background: #fff;
-  color: #2f5b8d;
+  color: #00a2ca;
 }
 
 @media (max-width: 1024px) {
@@ -860,7 +860,7 @@ section {
 }
 
 .services .title a:hover {
-  color: #2f5b8d;
+  color: #00a2ca;
 }
 
 .services .description {
@@ -913,12 +913,12 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #2f5b8d;
+  color: #00a2ca;
 }
 
 .portfolio #portfolio-flters li.filter-active::before,
 .portfolio #portfolio-flters li.filter-active::after {
-  color: #2f5b8d;
+  color: #00a2ca;
 }
 
 .portfolio .portfolio-item {
@@ -1089,7 +1089,7 @@ section {
 }
 
 .testimonials .owl-dot.active {
-  background-color: #2f5b8d !important;
+  background-color: #00a2ca !important;
 }
 
 @media (max-width: 767px) {
@@ -1124,7 +1124,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #2f5b8d;
+  color: #00a2ca;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1156,7 +1156,7 @@ section {
 }
 
 .pricing ul i {
-  color: #2f5b8d;
+  color: #00a2ca;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1174,7 +1174,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #2f5b8d;
+  background: #00a2ca;
   display: inline-block;
   padding: 8px 35px 10px 35px;
   border-radius: 50px;
@@ -1194,12 +1194,12 @@ section {
 }
 
 .pricing .featured {
-  border: 2px solid #2f5b8d;
+  border: 2px solid #00a2ca;
 }
 
 .pricing .featured h3 {
   color: #fff;
-  background: #2f5b8d;
+  background: #00a2ca;
 }
 
 .pricing .advanced {
@@ -1212,7 +1212,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #2f5b8d;
+  background: #00a2ca;
   color: #fff;
 }
 
@@ -1235,7 +1235,7 @@ section {
 .faq .faq-list a {
   display: block;
   position: relative;
-  font-family: #2f5b8d;
+  font-family: #00a2ca;
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
@@ -1254,7 +1254,7 @@ section {
 }
 
 .faq .faq-list a.collapse {
-  color: #2f5b8d;
+  color: #00a2ca;
 }
 
 .faq .faq-list a.collapsed {
@@ -1262,7 +1262,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #2f5b8d;
+  color: #00a2ca;
 }
 
 .faq .faq-list a.collapsed i::before {
@@ -1282,7 +1282,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #2f5b8d;
+  color: #00a2ca;
   float: left;
   width: 44px;
   height: 44px;
@@ -1324,7 +1324,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #2f5b8d;
+  background: #00a2ca;
   color: #fff;
 }
 
@@ -1404,7 +1404,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #2f5b8d;
+  background: #00a2ca;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1528,7 +1528,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #2f5b8d !important;
+  background-color: #00a2ca !important;
 }
 
 .portfolio-details .portfolio-info {
@@ -1618,7 +1618,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #2f5b8d;
+  background: #00a2ca;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
