--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -749,6 +749,425 @@ section {
   margin-bottom: 0;
 }
 
+.u-width-0percent {
+  width: 0% !important;
+}
+
+.u-width-1percent {
+  width: 1% !important;
+}
+
+.u-width-2percent {
+  width: 2% !important;
+}
+
+.u-width-3percent {
+  width: 3% !important;
+}
+
+.u-width-4percent {
+  width: 4% !important;
+}
+
+.u-width-5percent {
+  width: 5% !important;
+}
+
+.u-width-6percent {
+  width: 6% !important;
+}
+
+.u-width-7percent {
+  width: 7% !important;
+}
+
+.u-width-8percent {
+  width: 8% !important;
+}
+
+.u-width-9percent {
+  width: 9% !important;
+}
+
+.u-width-10percent {
+  width: 10% !important;
+}
+
+.u-width-11percent {
+  width: 11% !important;
+}
+
+.u-width-12percent {
+  width: 12% !important;
+}
+
+.u-width-13percent {
+  width: 13% !important;
+}
+
+.u-width-14percent {
+  width: 14% !important;
+}
+
+.u-width-15percent {
+  width: 15% !important;
+}
+
+.u-width-16percent {
+  width: 16% !important;
+}
+
+.u-width-17percent {
+  width: 17% !important;
+}
+
+.u-width-18percent {
+  width: 18% !important;
+}
+
+.u-width-19percent {
+  width: 19% !important;
+}
+
+.u-width-20percent {
+  width: 20% !important;
+}
+
+.u-width-21percent {
+  width: 21% !important;
+}
+
+.u-width-22percent {
+  width: 22% !important;
+}
+
+.u-width-23percent {
+  width: 23% !important;
+}
+
+.u-width-24percent {
+  width: 24% !important;
+}
+
+.u-width-25percent {
+  width: 25% !important;
+}
+
+.u-width-26percent {
+  width: 26% !important;
+}
+
+.u-width-27percent {
+  width: 27% !important;
+}
+
+.u-width-28percent {
+  width: 28% !important;
+}
+
+.u-width-29percent {
+  width: 29% !important;
+}
+
+.u-width-30percent {
+  width: 30% !important;
+}
+
+.u-width-31percent {
+  width: 31% !important;
+}
+
+.u-width-32percent {
+  width: 32% !important;
+}
+
+.u-width-33percent {
+  width: 33% !important;
+}
+
+.u-width-34percent {
+  width: 34% !important;
+}
+
+.u-width-35percent {
+  width: 35% !important;
+}
+
+.u-width-36percent {
+  width: 36% !important;
+}
+
+.u-width-37percent {
+  width: 37% !important;
+}
+
+.u-width-38percent {
+  width: 38% !important;
+}
+
+.u-width-39percent {
+  width: 39% !important;
+}
+
+.u-width-40percent {
+  width: 40% !important;
+}
+
+.u-width-41percent {
+  width: 41% !important;
+}
+
+.u-width-42percent {
+  width: 42% !important;
+}
+
+.u-width-43percent {
+  width: 43% !important;
+}
+
+.u-width-44percent {
+  width: 44% !important;
+}
+
+.u-width-45percent {
+  width: 45% !important;
+}
+
+.u-width-46percent {
+  width: 46% !important;
+}
+
+.u-width-47percent {
+  width: 47% !important;
+}
+
+.u-width-48percent {
+  width: 48% !important;
+}
+
+.u-width-49percent {
+  width: 49% !important;
+}
+
+.u-width-50percent {
+  width: 50% !important;
+}
+
+.u-width-51percent {
+  width: 51% !important;
+}
+
+.u-width-52percent {
+  width: 52% !important;
+}
+
+.u-width-53percent {
+  width: 53% !important;
+}
+
+.u-width-54percent {
+  width: 54% !important;
+}
+
+.u-width-55percent {
+  width: 55% !important;
+}
+
+.u-width-56percent {
+  width: 56% !important;
+}
+
+.u-width-57percent {
+  width: 57% !important;
+}
+
+.u-width-58percent {
+  width: 58% !important;
+}
+
+.u-width-59percent {
+  width: 59% !important;
+}
+
+.u-width-60percent {
+  width: 60% !important;
+}
+
+.u-width-61percent {
+  width: 61% !important;
+}
+
+.u-width-62percent {
+  width: 62% !important;
+}
+
+.u-width-63percent {
+  width: 63% !important;
+}
+
+.u-width-64percent {
+  width: 64% !important;
+}
+
+.u-width-65percent {
+  width: 65% !important;
+}
+
+.u-width-66percent {
+  width: 66% !important;
+}
+
+.u-width-67percent {
+  width: 67% !important;
+}
+
+.u-width-68percent {
+  width: 68% !important;
+}
+
+.u-width-69percent {
+  width: 69% !important;
+}
+
+.u-width-70percent {
+  width: 70% !important;
+}
+
+.u-width-71percent {
+  width: 71% !important;
+}
+
+.u-width-72percent {
+  width: 72% !important;
+}
+
+.u-width-73percent {
+  width: 73% !important;
+}
+
+.u-width-74percent {
+  width: 74% !important;
+}
+
+.u-width-75percent {
+  width: 75% !important;
+}
+
+.u-width-76percent {
+  width: 76% !important;
+}
+
+.u-width-77percent {
+  width: 77% !important;
+}
+
+.u-width-78percent {
+  width: 78% !important;
+}
+
+.u-width-79percent {
+  width: 79% !important;
+}
+
+.u-width-80percent {
+  width: 80% !important;
+}
+
+.u-width-81percent {
+  width: 81% !important;
+}
+
+.u-width-82percent {
+  width: 82% !important;
+}
+
+.u-width-83percent {
+  width: 83% !important;
+}
+
+.u-width-84percent {
+  width: 84% !important;
+}
+
+.u-width-85percent {
+  width: 85% !important;
+}
+
+.u-width-86percent {
+  width: 86% !important;
+}
+
+.u-width-87percent {
+  width: 87% !important;
+}
+
+.u-width-88percent {
+  width: 88% !important;
+}
+
+.u-width-89percent {
+  width: 89% !important;
+}
+
+.u-width-90percent {
+  width: 90% !important;
+}
+
+.u-width-91percent {
+  width: 91% !important;
+}
+
+.u-width-92percent {
+  width: 92% !important;
+}
+
+.u-width-93percent {
+  width: 93% !important;
+}
+
+.u-width-94percent {
+  width: 94% !important;
+}
+
+.u-width-95percent {
+  width: 95% !important;
+}
+
+.u-width-96percent {
+  width: 96% !important;
+}
+
+.u-width-97percent {
+  width: 97% !important;
+}
+
+.u-width-98percent {
+  width: 98% !important;
+}
+
+.u-width-99percent {
+  width: 99% !important;
+}
+
+.u-width-100percent {
+  width: 100% !important;
+}
+
+.c-progressBar {
+  background-color: black;
+  height: 0.001rem;
+  display: block;
+  border-radius: 50px;
+  height: 0.4rem;
+  margin: 0 0.25rem;
+}
+
+.c-progressBar--progress {
+  height: 0.4rem;
+  border-radius: 45px;
+  background-color: #00a2ca;
+}
+
 /*--------------------------------------------------------------
 # Features
 --------------------------------------------------------------*/
