--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #000000;
+  font-size: 18px;
 }
 
 a {
@@ -760,7 +761,7 @@ section {
 }
 
 .skillTxt .c-progressBar {
-  margin-top: 10px;
+  margin-top: 5px;
   margin-bottom: 20px;
 }
 
