--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #000000;
+  font-size: 18px;
 }
 
 a {
@@ -725,7 +726,7 @@ section {
 }
 
 .skillTxt .c-progressBar {
-  margin-top: 10px;
+  margin-top: 5px;
   margin-bottom: 20px;
 }
 
