--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -941,7 +941,7 @@ $amountPercent: 100;
 }
 
 .services .description {
-  font-size: 14px;
+  font-size: 15px;
   margin-left: 40px;
   line-height: 24px;
   margin-bottom: 0;
@@ -1446,8 +1446,8 @@ $amountPercent: 100;
 .contact .info p {
   padding: 0 0 0 60px;
   margin-bottom: 0;
-  font-size: 14px;
-  color: #555974;
+  font-size: 17px;
+  color: #393b47;
 }
 
 .contact .info .email,
